--- a/heap_sort/cpp/Makefile
+++ b/heap_sort/cpp/Makefile
@@ -10,7 +10,7 @@ run: $(PROG_NAME)
 
 debug: main.cpp HeapSort.cpp
 	c++ -Wall -Wextra -Werror -std=c++98 -g $^ -o $(PROG_NAME)
-	gdb $(PROG_NAME)
+	lldb $(PROG_NAME)
 edit1:
 	vi main.cpp
 
@@ -21,5 +21,6 @@ see:
 	less ./Makefile
 
 clean:
-	@rm -f ./$(PROG_NAME)
+	@rm -f ./$(PROG_NAME) 
+	@rm -rf ./$(PROG_NAME).dSYM
 	@rm -f ./a.out
