Check if name exists and assign new number for name is so. Each new node is placed into a binary tree with unique name and node.

--- a/graph_BFS/cpp/Makefile
+++ b/graph_BFS/cpp/Makefile
@@ -1,6 +1,11 @@
 PROG_NAME=GRAPH_BFS
 
-all: main.cpp list_funcs.cpp graph.cpp linkedList.cpp treeNode.cpp
+all: main.cpp list_funcs.cpp graphNode.cpp listNode.cpp treeNode.cpp
+	@clear
+	@clear
+	c++ -Wall -Wextra -Werror -std=c++98 $^ -o $(PROG_NAME)
+
+graph: main.cpp list_funcs.cpp graphNode.cpp linkedList.cpp
 	@clear
 	@clear
 	c++ -Wall -Wextra -Werror -std=c++98 $^ -o $(PROG_NAME)
@@ -8,7 +13,7 @@ all: main.cpp list_funcs.cpp graph.cpp linkedList.cpp treeNode.cpp
 run: $(PROG_NAME)
 	./$(PROG_NAME)
 
-debug: main.cpp list_funcs.cpp graph.cpp linkedList.cpp treeNode.cpp
+debug: main.cpp list_funcs.cpp graphNode.cpp linkedList.cpp treeNode.cpp
 	c++ -Wall -Wextra -Werror -std=c++98 -g $^ -o $(PROG_NAME)
 	lldb $(PROG_NAME)
 
@@ -16,7 +21,7 @@ edit1:
 	vi main.cpp
 
 edit2:
-	vi graph.cpp
+	vi graphNode.cpp
 
 see: 
 	less ./Makefile
