--- a/DFS/cpp/Makefile
+++ b/DFS/cpp/Makefile
@@ -1,6 +1,6 @@
 PROG_NAME=DFS
 
-all: main.cpp list_funcs.cpp BinaryTreeFuncs.cpp
+all: main.cpp list_funcs.cpp BinaryTreeFuncs.cpp LinkNode.cpp TreeNode.cpp
 	@clear
 	@clear
 	c++ -Wall -Wextra -Werror -std=c++98 $^ -o $(PROG_NAME)
@@ -8,7 +8,7 @@ all: main.cpp list_funcs.cpp BinaryTreeFuncs.cpp
 run: $(PROG_NAME)
 	./$(PROG_NAME)
 
-debug: main.cpp TreeNode.cpp list_funcs.cpp 
+debug: main.cpp list_funcs.cpp BinaryTreeFuncs.cpp LinkNode.cpp TreeNode.cpp
 	c++ -Wall -Wextra -Werror -std=c++98 -g $^ -o $(PROG_NAME)
 	lldb $(PROG_NAME)
 
