--- a/quick_sort/Makefile
+++ b/quick_sort/Makefile
@@ -1,19 +1,19 @@
 PROG_NAME=QUICK_SORT
 
-base: main.cpp list_funcs.cpp
-	@clear
-	@clear
-	c++ -Wall -Wextra -Werror -std=c++98 $^ -o $(PROG_NAME)
-	
 all: main.cpp QuickSort.cpp list_funcs.cpp
 	@clear
 	@clear
 	c++ -Wall -Wextra -Werror -std=c++98 $^ -o $(PROG_NAME)
 
+base: main.cpp list_funcs.cpp
+	@clear
+	@clear
+	c++ -Wall -Wextra -Werror -std=c++98 $^ -o $(PROG_NAME)
+	
 run: $(PROG_NAME)
 	./$(PROG_NAME)
 
-debug: main.cpp QuickSort.cpp
+debug: main.cpp QuickSort.cpp list_funcs.cpp
 	c++ -Wall -Wextra -Werror -std=c++98 -g $^ -o $(PROG_NAME)
 	lldb $(PROG_NAME)
 edit1:
